Added view animations, lazyload, form validator, call tracling script and some frequently used functions

--- a/index.html
+++ b/index.html
@@ -21,8 +21,17 @@
 
         <footer></footer>
 
-        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <!-- JQuery -->
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+        <!-- Lazyload -->
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.min.js"></script>
+
+        <!-- Form Validator -->
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
+
+        <!-- Viewportchecker -->
+        <script type="text/javascript" src="assets/js/jquery.viewportchecker.min.js"></script>
         <script src="assets/js/main.js"></script>
     </body>
 </html>
