--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
 
         <!-- Viewportchecker -->
-        <script type="text/javascript" src="assets/js/jquery.viewportchecker.min.js"></script>
-        <script src="assets/js/main.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jQuery-viewport-checker/1.8.8/jquery.viewportchecker.min.js"></script>
+        <script src="assets/prod/js/main.js"></script>
     </body>
 </html>
