--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="#### DESCRIPTION HERE ####">
-
+    <meta name="keywords" content="#### COMMA SEPERATED HERE ####">
     <title>#### REPLACE ME ####</title>
 
     <!-- Compiled Stylesheet -->
@@ -45,7 +45,7 @@
 
 
     <!-- SECTIONS IN HERE (can be found in template-sections.html) -->
-
+    
 
     <!-- Footer - King Kong Tag -->
     <footer>
