Added Table section and Video Slider Section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <!-- Compiled Stylesheet -->
     <link href="assets/prod/css/main.css" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -45,7 +48,7 @@
 
 
     <!-- SECTIONS IN HERE (can be found in template-sections.html) -->
-    
+
 
     <!-- Footer - King Kong Tag -->
     <footer>
