script type=“module” wasn’t loading in safari or IE

--- a/template-sections.html
+++ b/template-sections.html
@@ -723,6 +723,6 @@
 
 
 <!-- Custom Scripts -->
-<script type="module" src="assets/prod/js/main.js"></script>
+<script type="text/javascript" src="assets/prod/js/main.js"></script>
 </body>
 </html>
