--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -72,7 +72,7 @@
     </footer>
 
     <!-- Custom Scripts -->
-    <script type="module" src="../assets/prod/js/main.js"></script>
+    <script type="text/javascript" src="../assets/prod/js/main.js"></script>
 </body>
 
 </html>
