added checklist module

--- a/template-sections.html
+++ b/template-sections.html
@@ -491,6 +491,81 @@
     </div>
 </section>
 
+<section class="single-column">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-10 col-lg-9 text-center single-column__heading">
+
+                <h2>For A Limited Time, You’ll Also Get An Orangetheory Starter Pack When You Try Us Free For 7-Days:</h2>
+            </div>
+
+            <div class="col-12">
+
+                <div class="single-column__checks__before text-center">
+                    <img src="http://placeimg.com/1000/300/any" alt=""/>
+                </div>
+
+                <div class="single-column__checks">
+                    <div class="single-column__checks__item">
+                        <div class="single-column__checks__item__icon"></div>
+                        <div class="single-column__checks__item__text">
+                            <h5>FREE CONSULTATION WITH A CERTIFIED ORANGETHEORY COACH:</h5>
+                            <p>You’ll sit down with one of our experienced coaches where they’ll breakdown your goals and how to achieve them in the fastest way possible without spending hours over gruelling training regimes that don’t work</p>
+                        </div>
+                    </div>
+                    <div class="single-column__checks__item">
+                        <div class="single-column__checks__item__icon"></div>
+                        <div class="single-column__checks__item__text">
+                            <h5>PROVEN FAT BURNING AND MUSCLE BUILDING ROUTINES:</h5>
+                            <p>Access scientific-based training regimes which have been put through over 3 levels of rigorous testing so you can attain your dream body in record time</p>
+                        </div>
+                    </div>
+                    <div class="single-column__checks__item">
+                        <div class="single-column__checks__item__icon"></div>
+                        <div class="single-column__checks__item__text">
+                            <h5>FREE BODY SCAN:</h5>
+                            <p>We’ll give you a full-body composition scan so you know exactly how much lean muscle you have and how much fat you can lose.</p>
+                        </div>
+                    </div>
+                    <div class="single-column__checks__item">
+                        <div class="single-column__checks__item__icon"></div>
+                        <div class="single-column__checks__item__text">
+                            <h5>ACCESS TO THE STUDIO:</h5>
+                            <p>You’ll have access to any 3 Orangetheory classes so you can make the most out of the Mosman studio and get a feel for the environment</p>
+                        </div>
+                    </div>
+                    <div class="single-column__checks__item">
+                        <div class="single-column__checks__item__icon"></div>
+                        <div class="single-column__checks__item__text">
+                            <h5>OTBEAT HEART RATE MONITOR TO USE FOR FREE: </h5>
+                            <p>You’ll get your very own heart rate monitor to loan for your free week so you can track your progress during your workout and burn as many calories as possible. When you decide to sign up for a membership, you'll get up to 50% off your device!*</p>
+                        </div>
+                    </div>
+                    <div class="single-column__checks__item">
+                        <div class="single-column__checks__item__icon"></div>
+                        <div class="single-column__checks__item__text">
+                            <h5>DRINK BOTTLE, TOWEL & BAG: </h5>
+                            <p>You’ll get your very own bag, towel and drink bottle, so you have everything you need when you come in to Orangetheory Mosman for your workouts</p>
+                        </div>
+                    </div>
+                    <div class="single-column__checks__item">
+                        <div class="single-column__checks__item__icon"></div>
+                        <div class="single-column__checks__item__text">
+                            <h5>GIFT CARDS: </h5>
+                            <p>Get 2 x free 7-Day passes to introduce your friend or partner to Orangetheory Mosman so you can stay committed to your goals while training with friends!</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-12 col-md-6 text-center">
+                <a href="#try-us-free" class="btn btn-primary">Try us free for 7-days</a>
+                <p>Discover How To Burn More Calories Than Ever Before With Our Science-Backed Workouts</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!-- COMPARISON TABLE SECTION -->
 <section id="table" class="table">
     <div class="background-image-container semi-transparent-bg-light">
