deleted the checklist module i just added in favour of one with a form

--- a/template-sections.html
+++ b/template-sections.html
@@ -491,80 +491,7 @@
     </div>
 </section>
 
-<section class="single-column">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-10 col-lg-9 text-center single-column__heading">
 
-                <h2>For A Limited Time, You’ll Also Get An Orangetheory Starter Pack When You Try Us Free For 7-Days:</h2>
-            </div>
-
-            <div class="col-12">
-
-                <div class="single-column__checks__before text-center">
-                    <img src="http://placeimg.com/1000/300/any" alt=""/>
-                </div>
-
-                <div class="single-column__checks">
-                    <div class="single-column__checks__item">
-                        <div class="single-column__checks__item__icon"></div>
-                        <div class="single-column__checks__item__text">
-                            <h5>FREE CONSULTATION WITH A CERTIFIED ORANGETHEORY COACH:</h5>
-                            <p>You’ll sit down with one of our experienced coaches where they’ll breakdown your goals and how to achieve them in the fastest way possible without spending hours over gruelling training regimes that don’t work</p>
-                        </div>
-                    </div>
-                    <div class="single-column__checks__item">
-                        <div class="single-column__checks__item__icon"></div>
-                        <div class="single-column__checks__item__text">
-                            <h5>PROVEN FAT BURNING AND MUSCLE BUILDING ROUTINES:</h5>
-                            <p>Access scientific-based training regimes which have been put through over 3 levels of rigorous testing so you can attain your dream body in record time</p>
-                        </div>
-                    </div>
-                    <div class="single-column__checks__item">
-                        <div class="single-column__checks__item__icon"></div>
-                        <div class="single-column__checks__item__text">
-                            <h5>FREE BODY SCAN:</h5>
-                            <p>We’ll give you a full-body composition scan so you know exactly how much lean muscle you have and how much fat you can lose.</p>
-                        </div>
-                    </div>
-                    <div class="single-column__checks__item">
-                        <div class="single-column__checks__item__icon"></div>
-                        <div class="single-column__checks__item__text">
-                            <h5>ACCESS TO THE STUDIO:</h5>
-                            <p>You’ll have access to any 3 Orangetheory classes so you can make the most out of the Mosman studio and get a feel for the environment</p>
-                        </div>
-                    </div>
-                    <div class="single-column__checks__item">
-                        <div class="single-column__checks__item__icon"></div>
-                        <div class="single-column__checks__item__text">
-                            <h5>OTBEAT HEART RATE MONITOR TO USE FOR FREE: </h5>
-                            <p>You’ll get your very own heart rate monitor to loan for your free week so you can track your progress during your workout and burn as many calories as possible. When you decide to sign up for a membership, you'll get up to 50% off your device!*</p>
-                        </div>
-                    </div>
-                    <div class="single-column__checks__item">
-                        <div class="single-column__checks__item__icon"></div>
-                        <div class="single-column__checks__item__text">
-                            <h5>DRINK BOTTLE, TOWEL & BAG: </h5>
-                            <p>You’ll get your very own bag, towel and drink bottle, so you have everything you need when you come in to Orangetheory Mosman for your workouts</p>
-                        </div>
-                    </div>
-                    <div class="single-column__checks__item">
-                        <div class="single-column__checks__item__icon"></div>
-                        <div class="single-column__checks__item__text">
-                            <h5>GIFT CARDS: </h5>
-                            <p>Get 2 x free 7-Day passes to introduce your friend or partner to Orangetheory Mosman so you can stay committed to your goals while training with friends!</p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="col-12 col-md-6 text-center">
-                <a href="#try-us-free" class="btn btn-primary">Try us free for 7-days</a>
-                <p>Discover How To Burn More Calories Than Ever Before With Our Science-Backed Workouts</p>
-            </div>
-        </div>
-    </div>
-</section>
 
 <!-- COMPARISON TABLE SECTION -->
 <section id="table" class="table">
@@ -653,6 +580,117 @@
     </div>
 </section>
 
+<!-- Checklist w/ Form -->
+<section class="single-column"  id="try-us-free">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-10 col-lg-9 text-center">
+                <h2>Try Us Free For 7-Days And Find Out How You Can Burn More Fat Than Ever Before And Keep It Off For Good! (Total Value $XXX)</h2>
+            </div>
+
+            <div class="col-12">
+                <div class="single-column__checks__before text-center">
+                    <img src="http://placeimg.com/1000/300/any" alt=""/>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-10 col-lg-10">
+                <p>
+                    When you try Orangetheory free for 7 days, our highly-trained coaches will give you the tools you need to get into shape and melt off that stubborn body fat in a fun and dynamic way. BUT most importantly, they’ll also teach you how you can keep it off for good! 
+                </p>
+            </div>
+
+            <div class="col-12 col-md-10 col-lg-10">
+                <div class="single-column__checks">
+                    <div class="single-column__checks__item">
+                        <div class="single-column__checks__item__icon"></div>
+                        <div class="single-column__checks__item__text">
+                            <p><strong>Free Consultation With A Certified Orangetheory Coach:</strong></p>
+                            <p>Sit down with one of our experienced coaches where they’ll breakdown your goals and how to achieve them</p>
+                        </div>
+                    </div>
+                    <div class="single-column__checks__item">
+                        <div class="single-column__checks__item__icon"></div>
+                        <div class="single-column__checks__item__text">
+                            <p><strong>Proven Fat Burning And Muscle Building Routines:</strong> Access to scientific-based training regimes</p>
+                        </div>
+                    </div>
+                    <div class="single-column__checks__item">
+                        <div class="single-column__checks__item__icon"></div>
+                        <div class="single-column__checks__item__text">
+                            <p><strong>FREE BODY SCAN:</strong> A full-body composition scan so you know exactly how much lean muscle you have and how much fat you can lose</p>
+                        </div>
+                    </div>
+                    <div class="single-column__checks__item">
+                        <div class="single-column__checks__item__icon"></div>
+                        <div class="single-column__checks__item__text">
+                            <p><strong>Access To The Studio:</strong> Access to any 3 Orangetheory classes when you try us free for 7-days</p>
+                        </div>
+                    </div>
+                    <div class="single-column__checks__item">
+                        <div class="single-column__checks__item__icon"></div>
+                        <div class="single-column__checks__item__text">
+                            <p><strong>Otbeat Heart Rate Monitor To Use For Free:</strong> You’ll get your very own heart rate monitor to loan for your free week. When you decide to sign up for a membership, you'll get up to 50% off your device!* </p>
+                        </div>
+                    </div>
+                    <div class="single-column__checks__item">
+                        <div class="single-column__checks__item__icon"></div>
+                        <div class="single-column__checks__item__text">
+                            <p><strong>Drink Bottle, Towel & Bag:</strong> You’ll get your very own bag, towel and drink bottle</p>
+                        </div>
+                    </div>
+                    <div class="single-column__checks__item">
+                        <div class="single-column__checks__item__icon"></div>
+                        <div class="single-column__checks__item__text">
+                            <p><strong>X2 7 Day Gift Cards For Friends And Family:</strong> Get 2 x free 7-Day passes to introduce your friend or partner to Orangetheory Mosman so you can stay committed to your goals while training with friends!</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="single-column__afterchecklist">
+                    <p>PLEASE NOTE: The bonus Orangetheory Starter Packs are only available for a limited time and only while stocks last. Enter your details below now to ensure you don't miss out on this offer.</p>
+                </div>
+
+                <div class="single-column__form">
+                    <form method="POST" class="d-flex flex-column">
+                        <div class="form-row">
+                            <div class="form-group col-md-12">
+                                <label for="name">
+                                    <span class="icon icon-name"></span>
+                                    <input type="text" class="name" name="name" id="name" placeholder="Full Name*" data-kk-label="Full Name" required/>
+                                </label>
+                            </div>
+                            <div class="form-group col-md-12">
+                                <label for="email">
+                                    <span class="icon icon-email"></span>
+                                    <input type="email" class="email" id="email" name="email" placeholder="Email Address*" data-kk-label="Email Address" required>
+                                </label>
+                            </div>
+                            <div class="form-group col-md-12">
+                                <label for="phone">
+                                    <span class="icon icon-phone"></span>
+                                    <input type="text" class="phone" id="phone" name="phone" placeholder="Phone Number*" data-kk-label="Phone Number" required>
+                                </label>
+                            </div>
+                            <div class="form-group col-md-12">
+                                <label for="message">
+                                    <span class="icon icon-message"></span>
+                                    <textarea class="message" id="message" name="message" placeholder="Have questions?" data-kk-label="Have questions?" ></textarea>
+                                </label>
+                            </div>
+                            <div class="form-group col-md-12">
+                                <input type="submit" class="btn btn-primary" value="Try us free for 7-days"/>
+                            </div>
+                            <input type="hidden" name="something" value="Lead Form" data-kk-label="Lead Source" />
+                            <input type="hidden" name="planet" value="" />
+                        </div>
+                        <div class="form-messages"></div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <!-- QUESTIONNAIRE SECTION -->
 <section class="questionnaire" id="questionnaire">
