added youtube api support, add .yt-api to .video-preview-container

--- a/template-sections.html
+++ b/template-sections.html
@@ -313,10 +313,11 @@
             <div class="col-md-12">
                 <div class="slider">
                     <div class="slide">
+
                         <div class="video-preview-container video-container ">
-                            <iframe id="video-1" class="video-iframe" width="560" height="315" src="https://www.youtube.com/embed/gvSGTP2D_Lo?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe id="video-1" class="video-iframe" width="560" height="315" src="https://www.youtube.com/embed/gvSGTP2D_Lo?rel=0&enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             <div class="overlay"></div>
-                            <button class="play-button inline-video-trigge" data-video-id="gvSGTP2D_Lo">
+                            <button class="play-button inline-video-trigger" data-video-id="gvSGTP2D_Lo">
                                 <img src="assets/prod/images/icon-play.png" alt="">
                                 <p>Denise</p>
                             </button>
@@ -324,7 +325,7 @@
                     </div>
                     <div class="slide">
                         <div class="video-preview-container video-container">
-                            <iframe id="video-1" class="video-iframe" width="560" height="315" src="https://www.youtube.com/embed/gvSGTP2D_Lo?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe id="video-1" class="video-iframe" width="560" height="315" src="https://www.youtube.com/embed/gvSGTP2D_Lo?rel=0&enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             <div class="overlay"></div>
                             <button class="play-button inline-video-trigger" data-video-id="gvSGTP2D_Lo">
                                 <img src="assets/prod/images/icon-play.png" alt="">
@@ -334,7 +335,7 @@
                     </div>
                     <div class="slide">
                         <div class="video-preview-container video-container">
-                            <iframe id="video-1" class="video-iframe" width="560" height="315" src="https://www.youtube.com/embed/gvSGTP2D_Lo?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe id="video-1" class="video-iframe" width="560" height="315" src="https://www.youtube.com/embed/gvSGTP2D_Lo?rel=0&enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             <div class="overlay"></div>
                             <button class="play-button inline-video-trigger" data-video-id="gvSGTP2D_Lo">
                                 <img src="assets/prod/images/icon-play.png" alt="">
@@ -344,7 +345,7 @@
                     </div>
                     <div class="slide">
                         <div class="video-preview-container video-container">
-                            <iframe id="video-1" class="video-iframe" width="560" height="315" src="https://www.youtube.com/embed/gvSGTP2D_Lo?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe id="video-1" class="video-iframe" width="560" height="315" src="https://www.youtube.com/embed/gvSGTP2D_Lo?rel=0&enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             <div class="overlay"></div>
                             <button class="play-button inline-video-trigger" data-video-id="gvSGTP2D_Lo">
                                 <img src="assets/prod/images/icon-play.png" alt="">
@@ -836,6 +837,7 @@
 
 
 <!-- Custom Scripts -->
+<!-- <script type="text/javascript" src="https://www.youtube.com/iframe_api"></script> -->
 <script type="text/javascript" src="assets/prod/js/main.js"></script>
 </body>
 </html>
