Updated rem function, typography, button styles

--- a/template-sections.html
+++ b/template-sections.html
@@ -26,11 +26,11 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-11">
-                <p class="eyebrow d-none d-md-inline-block">Attention Everyone Who Is Looking At This Page</p>
+                <h4 class="eyebrow d-none d-md-block">Attention Everyone Who Is Looking At This Page</h4>
                 <h1>This Is The Massive Headline That CRO Has Probably Given You For The Hero Section Of This Site</h1>
             </div>
             <div class="col-md-8">
-                <p class="subheadline d-none d-md-inline-block">This is the subheadline item. We've made this one so it
+                <p class="subheadline d-none d-md-block">This is the subheadline item. We've made this one so it
                     doesnt stretch as wide as the headline. Use the column widths to make the text fit nice visually in
                     the hero.</p>
                 <div class="video-container mb-3">
@@ -38,7 +38,12 @@
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
-                <a class="btn btn-primary">Get Your Free Consultation</a>
+            </div>
+            <div class="col-md-8 col-lg-6">
+                <div class="btn-section">
+                    <a class="btn btn-primary">Get Your Free Consultation</a>
+                    <p> This is the descriptive CTA button which will probably be two lines long </p>
+                </div>
             </div>
         </div>
     </div>
@@ -52,12 +57,15 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-10 col-lg-9">
-                <p class="eyebrow d-none d-md-inline-block">Attention Everyone Who Is Looking At This Page</p>
+                <h4 class="eyebrow d-none d-md-block">Attention Everyone Who Is Looking At This Page</h4>
                 <h1>This Is The Massive Headline That CRO Has Probably Given You For The Hero Section Of This Site</h1>
-                <p class="subheadline col-lg-9 mx-auto d-none d-md-inline-block">This is the subheadline item. We've
-                    made this one so it doesnt stretch as wide as the headline. Use the column widths to make the text
-                    fit nice visually in the hero.</p>
-                <a class="btn btn-primary">Get Your Free Consultation</a>
+                <p class="subheadline col-lg-9 mx-auto d-none d-md-block">This is the subheadline item. We've made this one so it doesnt stretch as wide as the headline. Use the column widths to make the text fit nice visually in the hero.</p>
+            </div>
+            <div class="col-md-8 col-lg-6">
+                <div class="btn-section">
+                    <a class="btn btn-primary">Get Your Free Consultation</a>
+                    <p> This is the descriptive CTA button which will probably be two lines long </p>
+                </div>
             </div>
         </div>
     </div>
@@ -71,12 +79,15 @@
     <div class="container">
         <div class="row justify-content-start">
             <div class="col-md-10 col-lg-7">
-                <p class="eyebrow d-none d-md-inline-block">Attention Everyone Who Is Looking At This Page</p>
+                <h4 class="eyebrow d-none d-md-block">Attention Everyone Who Is Looking At This Page</h4>
                 <h1>This Is The Massive Headline That CRO Has Probably Given You For The Hero Section Of This Site</h1>
-                <p class="subheadline d-none d-md-inline-block">This is the subheadline item. We've made
-                    this one so it doesnt stretch as wide as the headline. Use the column widths to make the text fit
-                    nice visually in the hero.</p>
-                <a class="btn btn-primary">Get Your Free Consultation</a>
+                <p class="subheadline d-none d-md-block">This is the subheadline item. We've made this one so it doesnt stretch as wide as the headline. Use the column widths to make the text fit nice visually in the hero.</p>
+            </div>
+            <div class="col-md-8 col-lg-6">
+                <div class="btn-section">
+                    <a class="btn btn-primary">Get Your Free Consultation</a>
+                    <p> This is the descriptive CTA button which will probably be two lines long </p>
+                </div>
             </div>
         </div>
     </div>
@@ -90,30 +101,37 @@
     <div class="container">
         <div class="row justify-content-end">
             <div class="col-md-10 col-lg-7">
-                <p class="eyebrow d-none d-md-inline-block">Attention Everyone Who Is Looking At This Page</p>
+                <h4 class="eyebrow d-none d-md-block">Attention Everyone Who Is Looking At This Page<h4>
                 <h1>This Is The Massive Headline That CRO Has Probably Given You For The Hero Section Of This Site</h1>
-                <p class="subheadline col-md-9 px-0 d-none d-md-inline-block">This is the subheadline item. We've made
-                    this one so it doesnt stretch as wide as the headline. Use the column widths to make the text fit
-                    nice visually in the hero.</p>
-                <a class="btn btn-primary">Get Your Free Consultation</a>
+                <p class="subheadline col-md-9 px-0 d-none d-md-block">This is the subheadline item. We've made this one so it doesnt stretch as wide as the headline. Use the column widths to make the text fit nice visually in the hero.</p>
+            </div>
+            <div class="col-md-8 col-lg-6">
+                <div class="btn-section">
+                    <a class="btn btn-primary">Get Your Free Consultation</a>
+                    <p> This is the descriptive CTA button which will probably be two lines long </p>
+                </div>
             </div>
         </div>
     </div>
 </section>
 
 <!-- One Column - Centered Content -->
-<section class="two-column bg-light">
+<section class="single-column bg-light">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-10 col-lg-8">
-                <h2 class="text-center">This Is The Secondary Headline Size, It Will Probably Be The Same Size Across
-                    Most Of The Page </h2>
+            <div class="col-md-10 col-lg-8 text-center">
+                <h2>This Is The Secondary Headline Size, It Will Probably Be The Same Size Across Most Of The Page </h2>
             </div>
             <div class="col-md-8 col-lg-6">
-                <p>This is the paragraph text of the section. It will usually be one big paragraph, or two separate
-                    paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not
-                    just line breaks.</p>
-                <a class="btn btn-primary w-100">Get Your Free Consultation</a>
+                <p>This is the paragraph text of the section. It will usually be one big paragraph, or two separate paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not just line breaks.</p>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-8 col-lg-6">
+                <div class="btn-section">
+                    <a class="btn btn-primary">Get Your Free Consultation</a>
+                    <p> This is the descriptive CTA button which will probably be two lines long </p>
+                </div>
             </div>
         </div>
     </div>
@@ -128,9 +146,16 @@
                 <p>This is the paragraph text of the section. It will usually be one big paragraph, or two separate
                     paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not
                     just line breaks.</p>
-                <a class="btn btn-primary w-100">Get Your Free Consultation</a>
+                </div>
+                <div class="col-md-6 text-center order-first order-md-last">
+                    <div class="row justify-content-center">
+                        <div class="col-md-8 col-lg-6">
+                <div class="btn-section">
+                    <a class="btn btn-primary">Get Your Free Consultation</a>
+                    <p> This is the descriptive CTA button which will probably be two lines long </p>
+                </div>
             </div>
-            <div class="col-md-6 text-center order-first order-md-last">
+                    </div>
                 <img class="img-fluid lazyload mb-4 mb-md-0 view-animation fade-left" data-src="http://lorempixel.com/400/500">
             </div>
         </div>
@@ -149,9 +174,16 @@
                 <p>This is the paragraph text of the section. It will usually be one big paragraph, or two separate
                     paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not
                     just line breaks.</p>
-                <a class="btn btn-primary w-100">Get Your Free Consultation</a>
+                </div>
             </div>
-        </div>
+            <div class="row justify-content-center">
+                <div class="col-md-8 col-lg-6">
+                <div class="btn-section">
+                    <a class="btn btn-primary">Get Your Free Consultation</a>
+                    <p> This is the descriptive CTA button which will probably be two lines long </p>
+                </div>
+            </div>
+            </div>
     </div>
 </section>
 
