--- a/template-sections.html
+++ b/template-sections.html
@@ -582,7 +582,7 @@
 </section>
 
 <!-- Checklist w/ Form -->
-<section class="single-column"  id="try-us-free">
+<section class="single-column" >
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-10 col-lg-9 text-center">
